[#YMIR-291]に対処した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2914 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -4,3 +4,6 @@ plugin.name=Vili
 action.addFragments=Add or update fragments...
 action.action=Action
 action.togglePageAndHtml=Toggle Page and HTML
+action.viewOnServer=View on server
+action.createSource=Generate sources...
+action.viewRootOnServer=View the top page on server
