vili-apiのバージョンをSNAPSHOTから0.2.1-0に変更した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2926 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                templates/,\
                prefs/,\
-               lib/
+               lib/,\
+               lib/vili-api-0.2.1-0.jar
 src.includes = lib/,\
                plugin.properties,\
                plugin.xml,\
