ViliBehavior#getProperty()を追加した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2989 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -1,8 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.ymir.vili</groupId>
   <artifactId>vili-api</artifactId>
-  <version>0.2.1-1-SNAPSHOT</version>
+  <version>0.2.2-0-SNAPSHOT</version>
   <name>Vili API</name>
   <description>This is an API to communicate with Vili.</description>
   <build>
@@ -40,9 +42,15 @@
     </plugins>
   </build>
   <scm>
-    <connection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api</connection>
-    <developerConnection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api</developerConnection>
-    <url>http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=ymir</url>
+    <connection>
+      scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api
+    </connection>
+    <developerConnection>
+      scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api
+    </developerConnection>
+    <url>
+      http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=ymir
+    </url>
   </scm>
   <repositories>
     <repository>
