--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -1,10 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.ymir.vili</groupId>
   <artifactId>vili-api</artifactId>
-  <version>0.2.2-0-SNAPSHOT</version>
+  <version>0.2.2-0</version>
   <name>Vili API</name>
   <description>This is an API to communicate with Vili.</description>
   <build>
@@ -42,15 +40,9 @@
     </plugins>
   </build>
   <scm>
-    <connection>
-      scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api
-    </connection>
-    <developerConnection>
-      scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api
-    </developerConnection>
-    <url>
-      http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=ymir
-    </url>
+    <connection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/tags/vili-api-0.2.2-0</connection>
+    <developerConnection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/tags/vili-api-0.2.2-0</developerConnection>
+    <url>http://svn.seasar.org/browse/eclipse/tags/vili-api-0.2.2-0?root=ymir</url>
   </scm>
   <repositories>
     <repository>
