--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.ymir.vili</groupId>
   <artifactId>vili-api</artifactId>
-  <version>0.2.2-0</version>
+  <version>0.2.2-1-SNAPSHOT</version>
   <name>Vili API</name>
   <description>This is an API to communicate with Vili.</description>
   <build>
@@ -40,9 +40,9 @@
     </plugins>
   </build>
   <scm>
-    <connection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/tags/vili-api-0.2.2-0</connection>
-    <developerConnection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/tags/vili-api-0.2.2-0</developerConnection>
-    <url>http://svn.seasar.org/browse/eclipse/tags/vili-api-0.2.2-0?root=ymir</url>
+    <connection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api</connection>
+    <developerConnection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api</developerConnection>
+    <url>http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=ymir</url>
   </scm>
   <repositories>
     <repository>
