・プロジェクトのプロパティ画面でViliProjectPreferencesを編集できるようにした。 ・依存するViliのバージョンを0.2.2-0に変更した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2996 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -63,6 +63,30 @@
             class="org.seasar.ymir.eclipse.properties.TemplatePropertyPage"
             id="org.seasar.ymir.eclipse.properties.templatePropertyPage"
             name="Template">
+         <enabledWhen>
+            <adapt
+                  type="org.eclipse.core.resources.IProject">
+               <test
+                     property="org.eclipse.core.resources.projectNature"
+                     value="org.seasar.ymir.eclipse.viliProjectNature">
+               </test>
+            </adapt>
+         </enabledWhen>
+      </page>
+      <page
+            category="org.seasar.ymir.eclipse.properties.viliPropertyPage"
+            class="org.seasar.ymir.eclipse.properties.ViliProjectPreferencesPropertyPage"
+            id="org.seasar.ymir.eclipse.properties.viliProjectPreferencesPropertyPage"
+            name="Project preferences">
+         <enabledWhen>
+            <adapt
+                  type="org.eclipse.core.resources.IProject">
+               <test
+                     property="org.eclipse.core.resources.projectNature"
+                     value="org.seasar.ymir.eclipse.viliProjectNature">
+               </test>
+            </adapt>
+         </enabledWhen>
       </page>
    </extension>
    <extension
