パスのマッピング情報を生成する画面をキックするためのメニューを追加した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3039 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -7,3 +7,4 @@ action.togglePageAndHtml=Toggle Page and HTML
 action.viewOnServer=View on server
 action.createSource=Generate sources...
 action.viewRootOnServer=View the top page on server
+action.createPathMappings=Generate mappings of Page and HTML...
