・ルートパッケージ名をproperty画面で変更可能にした。 ・複数ルートパッケージ指定に対応した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3096 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -77,7 +77,7 @@
             category="org.seasar.ymir.eclipse.properties.viliPropertyPage"
             class="org.seasar.ymir.eclipse.properties.ViliProjectPreferencesPropertyPage"
             id="org.seasar.ymir.eclipse.properties.viliProjectPreferencesPropertyPage"
-            name="Project preferences">
+            name="Project Preferences">
          <enabledWhen>
             <adapt
                   type="org.eclipse.core.resources.IProject">
@@ -92,7 +92,7 @@
             category="org.seasar.ymir.eclipse.properties.viliPropertyPage"
             class="org.seasar.ymir.eclipse.properties.MoldParametersPropertyPage"
             id="org.seasar.ymir.eclipse.properties.moldParametersPropertyPage"
-            name="Skeleton/fragment parameters">
+            name="Skeleton/Fragment Parameters">
          <enabledWhen>
             <adapt
                   type="org.eclipse.core.resources.IProject">
