--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
+   <extension-point id="skeletonTemplates" name="Skeleton Templates" schema="schema/skeletonTemplates.exsd"/>
+   <extension-point id="fragmentTemplates" name="Fragment Templates" schema="schema/fragmentTemplates.exsd"/>
 
    <extension
          point="org.eclipse.ui.newWizards">
@@ -284,6 +286,128 @@
                style="push">
          </action>
          </actionSet>
+   </extension>
+   <extension
+         point="org.seasar.ymir.eclipse.skeletonTemplates">
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-skeleton-generic</artifactId>
+      <name>基本的なYmirプロジェクト</name>
+      <description>基本的なYmirプロジェクトを作成します。テンプレートエンジンにはFreyja ZPTエンジンを使用します。</description>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-skeleton-generic</artifactId>
+      <name>Ymir+DBFluteプロジェクト</name>
+      <description>基本的なYmirプロジェクトを作成します。テンプレートエンジンにはFreyja ZPTエンジンを使用します。データベースアクセスにはDBFluteを使用します。</description>
+      <fragments>
+        <fragment>
+          <groupId>org.seasar.ymir.skeleton</groupId>
+          <artifactId>dbflute-fragment-generic</artifactId>
+        </fragment>
+      </fragments>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-skeleton-generic</artifactId>
+      <name>Ymir標準プロジェクト（YSP）</name>
+      <description>The Ymir Projectで規定している標準構成のプロジェクトを作成します。</description>
+      <fragments>
+        <fragment>
+          <groupId>org.seasar.ymir.skeleton</groupId>
+          <artifactId>dbflute-fragment-generic</artifactId>
+        </fragment>
+        <fragment>
+          <groupId>org.seasar.ymir.skeleton</groupId>
+          <artifactId>ymir-fragment-utility</artifactId>
+        </fragment>
+        <fragment>
+          <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+          <artifactId>ysp-base</artifactId>
+        </fragment>
+      </fragments>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>skeleton-skeleton-generic</artifactId>
+      <name>Viliスケルトンプロジェクト</name>
+      <description>Viliのプロジェクトスケルトンを作成するためのプロジェクトを作成します。</description>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>skeleton-skeleton-web</artifactId>
+      <name>Vili Webアプリケーションスケルトンプロジェクト</name>
+      <description>ViliのWebアプリケーションプロジェクトスケルトンを作成するためのプロジェクトを作成します。</description>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>fragment-skeleton-generic</artifactId>
+      <name>Viliフラグメントプロジェクト</name>
+      <description>Viliのプロジェクトフラグメントを作成するためのプロジェクトを作成します。</description>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>t2-skeleton-generic</artifactId>
+      <name>標準のT2プロジェクト</name>
+      <description>標準のT2プロジェクトを作成します。テンプレートエンジンにはJSPを使用します。</description>
+    </skeleton>
+    <skeleton>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>cubby-skeleton-generic</artifactId>
+      <name>標準のCubbyプロジェクト</name>
+      <description>標準のCubbyプロジェクトを作成します。テンプレートエンジンにはJSPを使用します。</description>
+    </skeleton>
+   </extension>
+   <extension
+         point="org.seasar.ymir.eclipse.fragmentTemplates">
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-fragment-utility</artifactId>
+      <name>ユーティリティ</name>
+      <description>アプリケーションを効率良く開発するためのユーティリティクラスを追加します。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>dbflute-fragment-generic</artifactId>
+      <name>DBFlute</name>
+      <description>DBFluteを使ってデータベースにアクセスする機能を追加します。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-fragment-json</artifactId>
+      <name>JSON連携</name>
+      <description>JSONリクエストを受け取ったりJSONレスポンスを返したりする機能を追加します。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-fragment-amf</artifactId>
+      <name>AMF連携</name>
+      <description>AMFプロトコルで通信する機能を追加します。FlexからPageオブジェクトのメソッドを呼び出すことができるようになります。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>yonex-fragment-generic</artifactId>
+      <name>統合テスト環境（Yonex）</name>
+      <description>Yonexを使った統合テスト環境を追加します。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+      <artifactId>ysp-base</artifactId>
+      <name>[YSP] 基本リソース</name>
+      <description>[Ymir標準プロジェクト] Ymir標準プロジェクトを構築するための基本となるリソースを追加します。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+      <artifactId>ysp-login</artifactId>
+      <name>[YSP] ログイン機能</name>
+      <description>[Ymir標準プロジェクト] ログイン機能を追加します。</description>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+      <artifactId>ysp-crud</artifactId>
+      <name>[YSP] CRUD用のビューとロジック</name>
+      <description>[Ymir標準プロジェクト] CRUD用のビューとロジックを追加します。</description>
+    </fragment>
    </extension>
 
 </plugin>
