--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -289,125 +289,131 @@
    </extension>
    <extension
          point="org.seasar.ymir.eclipse.skeletonTemplates">
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>ymir-skeleton-generic</artifactId>
-      <name>基本的なYmirプロジェクト</name>
-      <description>基本的なYmirプロジェクトを作成します。テンプレートエンジンにはFreyja ZPTエンジンを使用します。</description>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>ymir-skeleton-generic</artifactId>
-      <name>Ymir+DBFluteプロジェクト</name>
-      <description>基本的なYmirプロジェクトを作成します。テンプレートエンジンにはFreyja ZPTエンジンを使用します。データベースアクセスにはDBFluteを使用します。</description>
-      <fragments>
-        <fragment>
-          <groupId>org.seasar.ymir.skeleton</groupId>
-          <artifactId>dbflute-fragment-generic</artifactId>
-        </fragment>
-      </fragments>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>ymir-skeleton-generic</artifactId>
-      <name>Ymir標準プロジェクト（YSP）</name>
-      <description>The Ymir Projectで規定している標準構成のプロジェクトを作成します。</description>
-      <fragments>
-        <fragment>
-          <groupId>org.seasar.ymir.skeleton</groupId>
-          <artifactId>dbflute-fragment-generic</artifactId>
-        </fragment>
-        <fragment>
-          <groupId>org.seasar.ymir.skeleton</groupId>
-          <artifactId>ymir-fragment-utility</artifactId>
-        </fragment>
-        <fragment>
-          <groupId>org.seasar.ymir.skeleton.ysp</groupId>
-          <artifactId>ysp-base</artifactId>
-        </fragment>
-      </fragments>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>skeleton-skeleton-generic</artifactId>
-      <name>Viliスケルトンプロジェクト</name>
-      <description>Viliのプロジェクトスケルトンを作成するためのプロジェクトを作成します。</description>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>skeleton-skeleton-web</artifactId>
-      <name>Vili Webアプリケーションスケルトンプロジェクト</name>
-      <description>ViliのWebアプリケーションプロジェクトスケルトンを作成するためのプロジェクトを作成します。</description>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>fragment-skeleton-generic</artifactId>
-      <name>Viliフラグメントプロジェクト</name>
-      <description>Viliのプロジェクトフラグメントを作成するためのプロジェクトを作成します。</description>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>t2-skeleton-generic</artifactId>
-      <name>標準のT2プロジェクト</name>
-      <description>標準のT2プロジェクトを作成します。テンプレートエンジンにはJSPを使用します。</description>
-    </skeleton>
-    <skeleton>
-      <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>cubby-skeleton-generic</artifactId>
-      <name>標準のCubbyプロジェクト</name>
-      <description>標準のCubbyプロジェクトを作成します。テンプレートエンジンにはJSPを使用します。</description>
-    </skeleton>
-   </extension>
-   <extension
-         point="org.seasar.ymir.eclipse.fragmentTemplates">
+<skeleton>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>java-skeleton-web</artifactId>
+  <name>%skeleton.ymir.name</name>
+  <description>%skeleton.ymir.description</description>
+  <fragments>
     <fragment>
       <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>ymir-fragment-utility</artifactId>
-      <name>ユーティリティ</name>
-      <description>アプリケーションを効率良く開発するためのユーティリティクラスを追加します。</description>
+      <artifactId>s2.4-fragment-generic</artifactId>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-fragment-generic</artifactId>
+    </fragment>
+  </fragments>
+</skeleton>
+<skeleton>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>java-skeleton-web</artifactId>
+  <name>%skeleton.ymir+dbflute.name</name>
+  <description>%skeleton.ymir+dbflute.description</description>
+  <fragments>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>s2.4-fragment-generic</artifactId>
+    </fragment>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>ymir-fragment-generic</artifactId>
     </fragment>
     <fragment>
       <groupId>org.seasar.ymir.skeleton</groupId>
       <artifactId>dbflute-fragment-generic</artifactId>
-      <name>DBFlute</name>
-      <description>DBFluteを使ってデータベースにアクセスする機能を追加します。</description>
+    </fragment>
+  </fragments>
+</skeleton>
+<skeleton>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>java-skeleton-web</artifactId>
+  <name>%skeleton.ysp.name</name>
+  <description>%skeleton.ysp.description</description>
+  <fragments>
+    <fragment>
+      <groupId>org.seasar.ymir.skeleton</groupId>
+      <artifactId>s2.4-fragment-generic</artifactId>
     </fragment>
     <fragment>
       <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>ymir-fragment-json</artifactId>
-      <name>JSON連携</name>
-      <description>JSONリクエストを受け取ったりJSONレスポンスを返したりする機能を追加します。</description>
+      <artifactId>ymir-fragment-generic</artifactId>
     </fragment>
     <fragment>
       <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>ymir-fragment-amf</artifactId>
-      <name>AMF連携</name>
-      <description>AMFプロトコルで通信する機能を追加します。FlexからPageオブジェクトのメソッドを呼び出すことができるようになります。</description>
+      <artifactId>ymir-fragment-utility</artifactId>
     </fragment>
     <fragment>
       <groupId>org.seasar.ymir.skeleton</groupId>
-      <artifactId>yonex-fragment-generic</artifactId>
-      <name>統合テスト環境（Yonex）</name>
-      <description>Yonexを使った統合テスト環境を追加します。</description>
+      <artifactId>dbflute-fragment-generic</artifactId>
     </fragment>
     <fragment>
       <groupId>org.seasar.ymir.skeleton.ysp</groupId>
       <artifactId>ysp-base</artifactId>
-      <name>[YSP] 基本リソース</name>
-      <description>[Ymir標準プロジェクト] Ymir標準プロジェクトを構築するための基本となるリソースを追加します。</description>
     </fragment>
-    <fragment>
-      <groupId>org.seasar.ymir.skeleton.ysp</groupId>
-      <artifactId>ysp-login</artifactId>
-      <name>[YSP] ログイン機能</name>
-      <description>[Ymir標準プロジェクト] ログイン機能を追加します。</description>
-    </fragment>
-    <fragment>
-      <groupId>org.seasar.ymir.skeleton.ysp</groupId>
-      <artifactId>ysp-crud</artifactId>
-      <name>[YSP] CRUD用のビューとロジック</name>
-      <description>[Ymir標準プロジェクト] CRUD用のビューとロジックを追加します。</description>
-    </fragment>
+  </fragments>
+</skeleton>
+   </extension>
+   <extension
+         point="org.seasar.ymir.eclipse.fragmentTemplates">
+<fragment>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>ymir-fragment-utility</artifactId>
+  <name>%fragment.ymir-fragment-utility.name</name>
+  <description>%fragment.ymir-fragment-utility.description</description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>dbflute-fragment-generic</artifactId>
+  <name>%fragment.dbflute-fragment-generic.name</name>
+  <description>
+    %fragment.dbflute-fragment-generic.description
+  </description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>ymir-fragment-json</artifactId>
+  <name>%fragment.ymir-fragment-json.name</name>
+  <description>%fragment.ymir-fragment-json.description</description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>ymir-fragment-amf</artifactId>
+  <name>%fragment.ymir-fragment-amf.name</name>
+  <description>%fragment.ymir-fragment-amf.description</description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>yonex-fragment-generic</artifactId>
+  <name>%fragment.yonex-fragment-generic.name</name>
+  <description>
+    %fragment.yonex-fragment-generic.description
+  </description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+  <artifactId>ysp-base</artifactId>
+  <name>%fragment.ysp-base.name</name>
+  <description>%fragment.ysp-base.description</description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+  <artifactId>ysp-login</artifactId>
+  <name>%fragment.ysp-login.name</name>
+  <description>%fragment.ysp-login.description</description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton.ysp</groupId>
+  <artifactId>ysp-crud</artifactId>
+  <name>%fragment.ysp-crud.name</name>
+  <description>%fragment.ysp-crud.description</description>
+</fragment>
+<fragment>
+  <groupId>org.seasar.ymir.skeleton</groupId>
+  <artifactId>mailsender-fragment-generic</artifactId>
+  <name>%fragment.mailsender-fragment-generic.name</name>
+  <description>%fragment.mailsender-fragment-generic.description</description>
+</fragment>
    </extension>
 
 </plugin>
