--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                templates/,\
                prefs/,\
-               lib/
+               lib/,\
+               schema/
 src.includes = lib/,\
                plugin.properties,\
                plugin.xml,\
