--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -8,3 +8,8 @@ action.viewOnServer=View on server
 action.createSource=Generate sources...
 action.viewRootOnServer=View the top page on server
 action.createPathMappings=Generate mappings of Page and HTML...
+
+skeleton.skeleton.name=Vili skeleton project
+skeleton.skeleton.description=Create a project to develop a Vili project skeleton.
+skeleton.fragment.name=Vili fragment project
+skeleton.fragment.description=Create a project to develop a Vili project fragment.
