natureの定義が間違っていたので訂正した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3184 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -3,8 +3,8 @@
 <plugin>
 
    <extension
-         id="org.seasar.ymir.eclipse.viliProjectNature"
-         name="Vili Project Nature"
+         id="org.seasar.ymir.eclipse.veProjectNature"
+         name="Ve Project Nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
