システムコンソールを表示できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3338 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -3,4 +3,5 @@ action.togglePageAndHtml=Toggle Page and HTML
 action.viewOnServer=View on server
 action.createSource=Generate sources...
 action.viewRootOnServer=View the top page on server
+action.viewSystemConsole=View system console...
 action.createPathMappings=Generate mappings of Page and HTML...
